...
      ) {
        for (i in 1..maxStars) {
          when {
            i <= fullStars ->
                Icon(
                    imageVector = Icons.Filled.Star,
                    contentDescription = "Full Star",
                    tint = starColor,
                    modifier = Modifier.size((30 * scale).dp).testTag("${testTag}Icon$i"))
            i == fullStars + 1 && hasHalfStar ->
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.StarHalf,
                    contentDescription = "Half Star",
                    tint = starColor,
                    modifier = Modifier.size((30 * scale).dp).testTag("${testTag}Icon$i"))
            else ->
                Icon(
                    imageVector = Icons.Filled.StarBorder,
                    contentDescription = "Empty Star",
                    tint = starColor,
                    modifier = Modifier.size((30 * scale).dp).testTag("${testTag}Icon$i"))
          }
        }

        text?.let {
...
